# audience-sdk

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  package.json  tsconfig.json
.github/workflows/: mparticle-checks.yml  publish-typescript-schema.yml  publish-typescript-sdk.yml
examples/: audience-definition-examples.ts  event-attribute-0.ts  events-or-user-attributes-0.ts  examples.ts  user-all-expressions.ts  user-attribute-0.ts
prompts/: generate-typescript-schema-examples.txt  generate_examples_from_schema.txt
schema/: audience-definition-schema.json  audience-schema.json  audience-schema.min.json
schema/examples/AbsoluteDate/: example2.json  example3.json
schema/examples/AggregationObject/: example1.json  example2.json  example3.json
schema/examples/Audience/: example1.json  example2.json  example3.json
schema/examples/AudienceQuery/: example1.json  example2.json  example3.json
schema/examples/CountExpression/: example1.json  example2.json  example3.json
schema/examples/DateExpression/: example1.json  example2.json  (+1 more)
sdk/python/: README.md  fixup_types.py  pyproject.toml  requirements-dev.txt
sdk/python/audience_sdk/models/: audience_models.py
sdk/python/mp_audience_sdk/models/: audience_models.py
sdk/python/tests/: test_audience_models.py
sdk/typescript/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
sdk/typescript-schema/: .releaserc.json  CHANGELOG.md  README.md  audience.js  audience.js.map  audience.ts  guards.ts  index.ts  jest.config.js  package-lock.json  package.json  tsconfig.json  version.ts
(+122 files in other folders)
