[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mp_audience_sdk"
version = "0.3.0"
description = "mParticle Audience SDK"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.9.2",
]

[project.urls]
"Homepage" = "https://github.com/mParticle/audience-sdk"
"Bug Tracker" = "https://github.com/mParticle/audience-sdk/issues"
